# simple_cpu

./: CMakeLists.txt
rtl/: simple_cpu.sv  simple_cpu_pc.sv  simple_cpu_rom.sv
tb/: test_beach.cpp  test_beach.f  test_beach.sv
